--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,9 @@ project_urls =
     Source = https://github.com/nils-werner/beancount-paypal
 
 [options]
+zip_safe = False
+include_package_data = True
+packages = find:
 install_requires =
     beancount
 
