feat: convert project to use beangulp framework
- This makes this project compatible with beancount 3
- Add beangulp dependency alongside beancount
- Convert PaypalImporter from beancount.ingest.importer to beangulp.Importer
- Update method signatures: file_account() -> account(), add date() and filename()
- Rename internal account parameter to account_name to avoid method collision
- Update README with beangulp usage examples and commands
- Update project description to mention beangulp compatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "beancount-paypal"
 version = "0.1.0"
-description = "Beancount Importer for PayPal CSV exports"
+description = "Beangulp-compatible Beancount Importer for PayPal CSV exports"
 readme = "README.md"
 license = "MIT"
 authors = [
@@ -24,6 +24,7 @@ classifiers = [
 ]
 dependencies = [
     "beancount",
+    "beangulp",
 ]
 requires-python = ">=3.8"
 
